@@ -1,6 +1,6 @@
-.\" Copyright (c) 1987-2012 UMD-CS, released under the X11 license;
+.\" Copyright (c) 1987-2020 UMD-CS, released under the X11 license;
 .\" see README and source files.
-.TH DVIBOOK 1
+.TH DVIBOOK 1 "8 September 2020" "TeX Live"
 .SH NAME
 dvibook \- rearrange pages in DVI file into signatures
 .SH SYNOPSIS
@@ -48,13 +48,12 @@ Dvibook normally prints the page numbers of the pages rearranged; the
 option suppresses this.
 .SH AUTHOR
 Angus Duggan, from dviselect(1), by
-Chris Torek, University of Maryland
+Chris Torek, University of Maryland. Currently maintained as part
+of TeX Live (https://tug.org/texlive).
 .SH "SEE ALSO"
-dviconcat(1), dviselect(1), latex(1), tex(1)
+dvitodvi(1), dviconcat(1), dviselect(1), latex(1), tex(1)
 .br
 .I "MC-TeX User's Guide"
-.br
-.I "The TeXbook"
 .SH BUGS
 .I Dvibook
 does not adjust the parameters in the postamble; however, since these
